# 3d_asset_manager

./: .gitignore  README.md
backend/: assets.db  init_script.py  main.py  manage.py  requirements.txt  schemas.py
backend/database/: database.py  models.py
client/: CMakeLists.txt  ComponentListView.qml  GlobalPartListView.qml  Main.qml  VehicleListView.qml  VersionListView.qml  assetservice.cpp  assetservice.h  componentmodel.cpp  componentmodel.h  globalpartmodel.cpp  globalpartmodel.h  main.cpp  searchproxymodel.cpp  searchproxymodel.h  vehiclemodel.cpp  vehiclemodel.h  versionmodel.cpp  versionmodel.h
